force-app/main/default/objects/Account/fields/Account_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Group_ID__c</fullName>
    <formula>ccrz__E_AccountGroup__r.ccrz__AccountGroupID__c</formula>
    <label>Account Group ID</label>
    <type>Text</type>
</CustomField>