force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Box is checked if the account is an Active account.</description>
    <inlineHelpText>Box is checked if the account is an Active account.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>