force-app/main/default/objects/Account/fields/Active_Ship_To_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Ship_To_Count__c</fullName>
    <description>rollup helper number of active ship to</description>
    <label>Active Ship To Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>