force-app/main/default/objects/Account/fields/APTS_County_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>APTS_County_Sales_Tax__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County Sales Tax</label>
    <referenceTo>APTS_Sales_Tax__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>