force-app/main/default/objects/Account/fields/APTS_County_Surtax__c.field-meta.xml
<CustomField>
    <fullName>APTS_County_Surtax__c</fullName>
    <formula>APTS_County_Sales_Tax__r.APTS_County_Surtax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>County Surtax%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>