force-app/main/default/objects/Account/fields/APTS_State_Tax__c.field-meta.xml
<CustomField>
    <fullName>APTS_State_Tax__c</fullName>
    <formula>APTS_County_Sales_Tax__r.APTS_State_Tax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State Tax%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>