force-app/main/default/objects/Account/fields/Apttus_Config2__TaxExemptStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
    <description>The tax exempt status. Applicable only when tax exempt.</description>
    <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
    <label>Tax Exempt Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>