force-app/main/default/objects/Account/fields/B2B_Account_Menu_Control__c.field-meta.xml
<CustomField>
    <fullName>B2B_Account_Menu_Control__c</fullName>
    <description>For B2B Accounts - Must be populated to control which menus will be displayed</description>
    <inlineHelpText>For B2B Accounts - Must be populated to control which menus will be displayed</inlineHelpText>
    <label>B2B Account Menu Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2B_Account_Menu_Control</valueSetName>
    </valueSet>
</CustomField>