force-app/main/default/objects/Account/fields/B2B_TM_User__c.field-meta.xml
<CustomField>
    <fullName>B2B_TM_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User lookup for TM to have access to the account in Ecommerce site.</description>
    <inlineHelpText>User lookup for TM to have access to the account in Ecommerce site.</inlineHelpText>
    <label>B2B TM User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>