force-app/main/default/objects/Account/fields/Competitive_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox needs to be reset after each Travel Incentives period (toro FY)</description>
    <inlineHelpText>For Toro Travel Incentives tracking</inlineHelpText>
    <label>Competitive Conversion</label>
    <type>Checkbox</type>
</CustomField>