force-app/main/default/objects/Account/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <description>Select the Physical County that is for this address.  This is to be used for assigning Sales Reps and Service Advisor territory.</description>
    <inlineHelpText>Select the Physical County that is for this address.  This is to be used for assigning Sales Reps and Service Advisor territory.</inlineHelpText>
    <label>County</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alachua</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Brevard</fullName>
            </value>
            <value>
                <fullName>Charlotte</fullName>
            </value>
            <value>
                <fullName>Citrus</fullName>
            </value>
            <value>
                <fullName>Clay</fullName>
            </value>
            <value>
                <fullName>Collier</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>De Soto</fullName>
            </value>
            <value>
                <fullName>Dixie</fullName>
            </value>
            <value>
                <fullName>Duval</fullName>
            </value>
            <value>
                <fullName>Flagler</fullName>
            </value>
            <value>
                <fullName>Franklin</fullName>
            </value>
            <value>
                <fullName>Gadsden</fullName>
            </value>
            <value>
                <fullName>Gilchrist</fullName>
            </value>
            <value>
                <fullName>Glades</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Hardee</fullName>
            </value>
            <value>
                <fullName>Hendry</fullName>
            </value>
            <value>
                <fullName>Hernando</fullName>
            </value>
            <value>
                <fullName>Highlands</fullName>
            </value>
            <value>
                <fullName>Hillsborough</fullName>
            </value>
            <value>
                <fullName>Jefferson</fullName>
            </value>
            <value>
                <fullName>Lafayette</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Lee</fullName>
            </value>
            <value>
                <fullName>Leon</fullName>
            </value>
            <value>
                <fullName>Levy</fullName>
            </value>
            <value>
                <fullName>Liberty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>