force-app/main/default/objects/Account/fields/Customer_Community_Share_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Community_Share_Name__c</fullName>
    <label>Customer Community Share Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>