force-app/main/default/objects/Account/fields/Dealer_Number__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Number__c</fullName>
    <description>Field to be updated through Rollup Helper</description>
    <label>Dealer Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>