force-app/main/default/objects/Account/fields/ERP_External_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_External_ID__c</fullName>
    <description>Prelude System Customer Number ID</description>
    <externalId>true</externalId>
    <inlineHelpText>Prelude system Customer Number ID</inlineHelpText>
    <label>ERP External ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>