force-app/main/default/objects/Account/fields/Exempt_Floor_Plan_Account__c.field-meta.xml
<CustomField>
    <fullName>Exempt_Floor_Plan_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Account is Exempt from Floor Plan Leasing Listings.</description>
    <inlineHelpText>Check this box if the Account is Exempt from Floor Plan Leasing Listings.</inlineHelpText>
    <label>Exempt Floor Plan Account</label>
    <type>Checkbox</type>
</CustomField>