force-app/main/default/objects/Account/fields/FSA_Flownet__c.field-meta.xml
<CustomField>
    <fullName>FSA_Flownet__c</fullName>
    <description>Primary Flownet Service Advisor for the customer</description>
    <inlineHelpText>Primary Flownet Service Advisor for the customer</inlineHelpText>
    <label>Flownet FSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>513 - Ralph Silletti</fullName>
            </value>
            <value>
                <fullName>514 - David Turnbow</fullName>
            </value>
            <value>
                <fullName>516 - Steve Wimmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>