force-app/main/default/objects/Account/fields/FSA_Irrigation__c.field-meta.xml
<CustomField>
    <fullName>FSA_Irrigation__c</fullName>
    <description>Primary Irrigation Field Service Advisor for the customer.</description>
    <inlineHelpText>Primary Irrigation Field Service Advisor for the customer.</inlineHelpText>
    <label>Irrigation FSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>511 - Ralph Silletti</fullName>
            </value>
            <value>
                <fullName>515 - Kevin Powers</fullName>
            </value>
            <value>
                <fullName>517 - Amy Burgert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>