force-app/main/default/objects/Account/fields/FSA_Turf__c.field-meta.xml
<CustomField>
    <fullName>FSA_Turf__c</fullName>
    <description>Golf and SFG Field Service Advisor for Golf and Turf Equipment.</description>
    <inlineHelpText>Golf and SFG Field Service Advisor for Golf and Turf Equipment.</inlineHelpText>
    <label>Turf FSA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>88A - Bill Berdnik</fullName>
            </value>
            <value>
                <fullName>88B - K.J. Skel</fullName>
            </value>
            <value>
                <fullName>88C - Darrin Ellis</fullName>
            </value>
            <value>
                <fullName>88D - Bryan Greenhill</fullName>
            </value>
            <value>
                <fullName>88E - Joe Bishop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>