force-app/main/default/objects/Account/fields/Irrigation_Primary_Satellite__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Primary_Satellite__c</fullName>
    <inlineHelpText>Rollup Helper from Demographic</inlineHelpText>
    <label>Irrigation Primary Satellite</label>
    <length>50</length>
    <type>Text</type>
</CustomField>