force-app/main/default/objects/Account/fields/Irrigation_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Salesperson__c</fullName>
    <description>This is the primary Irrigation Sales person assigned to the account.</description>
    <inlineHelpText>This is the primary Irrigation Sales person assigned to the account.</inlineHelpText>
    <label>Irrigation Salesperson</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>501 - Bo Irby</fullName>
            </value>
            <value>
                <fullName>502 - Andrew Johnston</fullName>
            </value>
            <value>
                <fullName>504 - Tina Neuzil</fullName>
            </value>
            <value>
                <fullName>505 - Tim Denton</fullName>
            </value>
            <value>
                <fullName>513 - Ralph Silletti (Flownet)</fullName>
            </value>
            <value>
                <fullName>514 - David Turnbow (Flownet)</fullName>
            </value>
            <value>
                <fullName>516 - Steve Wimmer (Flownet)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>