force-app/main/default/objects/Account/fields/Irrigation_Target_Account__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_Target_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Target account flag for Irrigation.  Loaded 4/10/19 based upon accounts that have bought Irrigation.  Using to target related Contacts for email blast.</description>
    <label>Irrigation Target Account</label>
    <type>Checkbox</type>
</CustomField>