force-app/main/default/objects/Account/fields/Irrigation_TM_Email__c.field-meta.xml
<CustomField>
    <fullName>Irrigation_TM_Email__c</fullName>
    <description>Irrigation TM Email address rolled up using roll-up helper from active Location field.</description>
    <label>Irrigation TM Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>