force-app/main/default/objects/Account/fields/Number_of_demo_in_accounts_FY_17__c.field-meta.xml
<CustomField>
    <fullName>Number_of_demo_in_accounts_FY_17__c</fullName>
    <description>Rollup helper field</description>
    <label>Number of demo in accounts FY 17</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>