force-app/main/default/objects/Account/fields/Open_Irrigation_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Irrigation_Opportunities__c</fullName>
    <label>Open Irrigation Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.RecordTypeId</field>
        <operation>equals</operation>
        <value>Golf Irrig Sales</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>notEqual</operation>
        <value>Closed Won, Closed No Interest, Closed Lost / Dead, Closed Lost, Closed Dead, Testing / Training</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>