force-app/main/default/objects/Account/fields/Previous_FY_Sales_Link__c.field-meta.xml
<CustomField>
    <fullName>Previous_FY_Sales_Link__c</fullName>
    <formula>HYPERLINK(

/* If they&apos;re in Lightning */
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

/* Use Lightning syntax, optimized to avoid full page reload */
&quot;#/sObject/00O0W000005iw5mUAA/view?fv0=&quot;,

/* Otherwise use Classic syntax */
&quot;/00O0W000005iw5mUAA?pv0=&quot;)

/* Append the Account ID */
&amp;Id,

/* Specify the link text */
&quot;Report URL&quot;,

/* Open in new window */
&quot;_blank&quot;
)</formula>
    <inlineHelpText>Click here to view sales history for previous FY</inlineHelpText>
    <label>Previous FY Sales Report</label>
    <type>Text</type>
</CustomField>