force-app/main/default/objects/Account/fields/Primary_Commercial_TM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Commercial_TM__c</fullName>
    <label>Primary Commercial TM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>