force-app/main/default/objects/Account/fields/Primary_Irrigation_TM__c.field-meta.xml
<CustomField>
    <fullName>Primary_Irrigation_TM__c</fullName>
    <description>Primary Irrigation TM populated by Rollup Helper from Ship-to records.</description>
    <label>Primary Irrigation TM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>