force-app/main/default/objects/Account/fields/Primary_Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesperson__c</fullName>
    <description>This is the primary Sales person assigned to the account.  This value should be assigned by the business system.</description>
    <inlineHelpText>This is the primary Sales person assigned to the account.  This value should be assigned by the business system.</inlineHelpText>
    <label>Primary Salesperson</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>201 - Rick Gooding</fullName>
            </value>
            <value>
                <fullName>202 - Frank Pitman</fullName>
            </value>
            <value>
                <fullName>203 - Jamie Short</fullName>
            </value>
            <value>
                <fullName>204 - Bill Johnson</fullName>
            </value>
            <value>
                <fullName>221 - Rick Gooding - Municipality</fullName>
            </value>
            <value>
                <fullName>222 - Frank Pitman - Municipality</fullName>
            </value>
            <value>
                <fullName>223 - Jamie Short - Municipality</fullName>
            </value>
            <value>
                <fullName>249 - Consumer House</fullName>
            </value>
            <value>
                <fullName>303 - Pete Clover</fullName>
            </value>
            <value>
                <fullName>304 - Ken Arsenault (Golf)</fullName>
            </value>
            <value>
                <fullName>305 - Bill Wallace (Golf)</fullName>
            </value>
            <value>
                <fullName>306 - Scott LoVecchio</fullName>
            </value>
            <value>
                <fullName>307 - Taylor Eli</fullName>
            </value>
            <value>
                <fullName>308 - Ron Bear</fullName>
            </value>
            <value>
                <fullName>309 - Jim Spano</fullName>
            </value>
            <value>
                <fullName>310 - Scott Ford</fullName>
            </value>
            <value>
                <fullName>321 - PreOwned Sales Team</fullName>
            </value>
            <value>
                <fullName>349 - Golf House Account</fullName>
            </value>
            <value>
                <fullName>401 - Jerry Adams</fullName>
            </value>
            <value>
                <fullName>402 - Rick Gooding (SFG)</fullName>
            </value>
            <value>
                <fullName>403 - Bill Wallace (SFG)</fullName>
            </value>
            <value>
                <fullName>404 - Chris Fordney</fullName>
            </value>
            <value>
                <fullName>405 - Bill Johnson</fullName>
            </value>
            <value>
                <fullName>406 - Ken Arsenault (SFG)</fullName>
            </value>
            <value>
                <fullName>449 - SFG House Account</fullName>
            </value>
            <value>
                <fullName>501 - Paul Hoffman</fullName>
            </value>
            <value>
                <fullName>502 - Andrew Johnston</fullName>
            </value>
            <value>
                <fullName>504 - Tina Neuzil</fullName>
            </value>
            <value>
                <fullName>505 - Tim Denton</fullName>
            </value>
            <value>
                <fullName>513 - Ralph Silletti (Flownet)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>