force-app/main/default/objects/Account/fields/Primary_TM_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_TM_Email__c</fullName>
    <description>Primary TM Email address rolled up using roll-up helper from active Location field.</description>
    <label>Primary TM Email</label>
    <length>80</length>
    <type>Text</type>
</CustomField>