force-app/main/default/objects/Account/fields/PY_Dealer_Sales_Recap__c.field-meta.xml
<CustomField>
    <fullName>PY_Dealer_Sales_Recap__c</fullName>
    <formula>IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,

HYPERLINK(&quot;/lightning/r/00O0W000005qg0L/view?fv0=&quot; &amp;   Id  , &quot;Open Report&quot; , &quot;_blank&quot;), 

HYPERLINK(&quot;/00O0W000005qg0L?pv0=&quot; &amp; Id, &quot;Open Report&quot; , &quot;_blank&quot;)
)</formula>
    <inlineHelpText>Dealer Equipment Sales Report for PY</inlineHelpText>
    <label>PY Dealer Sales Recap</label>
    <type>Text</type>
</CustomField>