force-app/main/default/objects/Account/fields/pymt__Convert_To_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>pymt__Convert_To_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>PaymentConnect checks this box when auto-creating a Contact and an &apos;Individual Account&apos; that should be converted to a PersonAccount using a batch converter.</inlineHelpText>
    <label>Convert To Person Account</label>
    <type>Checkbox</type>
</CustomField>