force-app/main/default/objects/Account/fields/Search_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Search_Keywords__c</fullName>
    <description>Keywords to use when searching for an account.</description>
    <inlineHelpText>Enter any keywords to be used to locate an account.</inlineHelpText>
    <label>Search Keywords</label>
    <type>TextArea</type>
</CustomField>