force-app/main/default/objects/Account/fields/Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Ship_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shipping Location with Billing Address</description>
    <inlineHelpText>Shipping Location with Billing Address</inlineHelpText>
    <label>Ship-To</label>
    <referenceTo>Ship_To__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>