force-app/main/default/objects/Account/fields/Ship_to_Price_Group__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Price_Group__c</fullName>
    <description>Rollup Helper</description>
    <inlineHelpText>For reference only</inlineHelpText>
    <label>National Ship-to Price Group</label>
    <type>TextArea</type>
</CustomField>