force-app/main/default/objects/Account/fields/Superintendent_Count__c.field-meta.xml
<CustomField>
    <fullName>Superintendent_Count__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Superintendent Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>