force-app/main/default/objects/Account/fields/SVMX_MD_NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>SVMX_MD_NumberofLocations__c</fullName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>