force-app/main/default/objects/Account/fields/X18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_Digit_ID__c</fullName>
    <description>Formula to show 18 digit ID for Prelude</description>
    <formula>CASESAFEID(Id)</formula>
    <label>18 Digit ID</label>
    <type>Text</type>
</CustomField>