force-app/main/default/objects/Account/fields/YTD_Irrigation_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Irrigation_Sales__c</fullName>
    <description>Rollup Helper field from Order History</description>
    <label>YTD Irrigation Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>