force-app/main/default/objects/Account/fields/YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales__c</fullName>
    <label>YTD Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>