force-app/main/default/objects/Account/listViews/All_Accounts_Kiosk.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Kiosk</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>County__c</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Customer</value>
    </filters>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>notEqual</operation>
        <value>Dealer,Distributor</value>
    </filters>
    <label>All Accounts Kiosk</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <group>Shop_Community_Public_Group</group>
    </sharedTo>
</ListView>