force-app/main/default/objects/Account/listViews/All_B2B_Accounts.listView-meta.xml
<ListView>
    <fullName>All_B2B_Accounts</fullName>
    <booleanFilter>1 AND (2 or 3)</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Account_Group_ID__c</columns>
    <columns>B2B_Account_Menu_Control__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.ADDRESS2_CITY</columns>
    <columns>ACCOUNT.ADDRESS2_STATE</columns>
    <columns>ACCOUNT.ADDRESS2_ZIP</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Active_Ship_To_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.ACCOUNT_NUMBER</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>All B2B Accounts</label>
</ListView>